
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.connectnow.MainActivity" android:layout_height="32dp" android:layout_width="match_parent">

    <item
        android:id="@+id/btnHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home_foreground"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/btnCamera"
        android:title="@string/scan"
        android:icon="@drawable/ic_camera_foreground"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/btnContacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contacts_foreground"
        app:showAsAction="ifRoom"/>

</menu>