<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".EditPersonal">

  <TextView
      android:id="@+id/tvPersonalInformation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="340dp"
      android:text="@string/personal_information"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnSave"
      android:layout_width="120dp"
      android:layout_height="48dp"
      android:layout_marginTop="320dp"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etFirstName"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="212dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/first_name"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="First Name"
      tools:ignore="LabelFor" />

  <EditText
      android:id="@+id/etPhone"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="144dp"
      android:ems="10"
      android:inputType="phone"
      android:hint="@string/phone"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="Phone"
      tools:ignore="LabelFor" />

  <EditText
      android:id="@+id/etEmail"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:hint="@string/email"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="Email"
      tools:ignore="LabelFor" />

  <EditText
      android:id="@+id/etLastName"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="96dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/last_name"
      android:textAlignment="center"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.494"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="Last Name"
      tools:ignore="LabelFor" />


  <FrameLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior" />

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/navigationView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@color/ic_camera_background"
      app:itemIconTint="@color/white"
      app:itemTextColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:menu="@menu/navigation" />



</androidx.constraintlayout.widget.ConstraintLayout>